Fixed padding on save draft button when viewing on mobile

--- a/app/components/community_activity_component/community_activity_component.scss
+++ b/app/components/community_activity_component/community_activity_component.scss
@@ -176,6 +176,8 @@
 
           .save-draft {
             grid-column: 1;
+            padding-left: 4px;
+            padding-right: 4px;
           }
 
           .ncce-modal--reopen {
